[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/interface/white_block.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/Interface.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/MultilineButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/great_wibes_30.theme" type="Theme" id=4]
[ext_resource path="res://assets/fonts/great_wibes.theme" type="Theme" id=5]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="BlackOverlay" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.321569 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="SecondTimer" type="Timer" parent="."]
one_shot = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CountdownTimer" type="Label" parent="CenterContainer"]
margin_left = 84.0
margin_top = 120.0
margin_right = 96.0
margin_bottom = 149.0
theme = ExtResource( 4 )
text = "3"
align = 1
valign = 1

[node name="VerticalContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CountText" type="Label" parent="VerticalContainer"]
margin_right = 180.0
margin_bottom = 18.0
theme = ExtResource( 5 )
text = "0"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 116.0
margin_right = 170.0
margin_bottom = 154.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="ButtonRestart" parent="ButtonsContainer" instance=ExtResource( 3 )]
margin_right = 70.0
margin_bottom = 38.0
rect_min_size = Vector2( 70, 38 )
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
button_text = "RESTART\\nLEVEL"
button_min_width = 70.0

[node name="ButtonClose" parent="ButtonsContainer" instance=ExtResource( 3 )]
margin_left = 90.0
margin_right = 160.0
margin_bottom = 38.0
rect_min_size = Vector2( 70, 38 )
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
button_text = "CLOSE\\nGAME"
button_min_width = 70.0

[connection signal="timeout" from="SecondTimer" to="." method="on_timer_out"]
[connection signal="button_down" from="ButtonsContainer/ButtonRestart" to="." method="on_restart_pressed"]
[connection signal="button_down" from="ButtonsContainer/ButtonClose" to="." method="on_close_pressed"]
